# congress-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/congress_mcp/: __init__.py  __main__.py  annotations.py  client.py  config.py  exceptions.py  middleware.py  server.py
src/congress_mcp/resources/: __init__.py  dynamic.py  static.py
src/congress_mcp/tools/: __init__.py  amendments.py  bills.py  committee_meetings.py  committee_prints.py  committee_reports.py  committees.py  communications.py  congress.py  congressional_record.py  crs_reports.py  hearings.py  house_requirements.py  laws.py  members.py  nominations.py  summaries.py  treaties.py  votes.py
src/congress_mcp/types/: __init__.py  enums.py
tests/: __init__.py  conftest.py  test_client.py  test_enum_validation.py  test_integration_live.py  test_pagination.py
tests/test_tools/: __init__.py  test_amendments.py  test_bills.py  test_date_filter_group2.py  test_hearings.py  test_members.py  test_sort_params.py  test_summaries.py  test_treaties.py
